<resources>
    <string name="app_name">Vume Games</string>
    <string name="rummy_app_name">Josh Rummy</string>
    <string name="callbreak_app_name">Josh Callbreak</string>
    <string name="fantasy_league_app_name">Fantasy League</string>
    <string name="app_version">App version : %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="loading_text">Loading ...</string>
    <string name="game_view_content_description">Game view</string>
    <string name="josh_server_api_key">cqknjvlljhs9</string>
    <string name="notification_channel_id">joshrummmynotificationchannel</string>
    <string name="fcm_server_key">AAAA1VpU6HE:APA91bH_gSF8Hs0Jj8Ie4I7zFKJmdV5NbZuj0EZd1JP89VonG6iLPxBWsIMGhZwQxMiyvH6P0O3v4Y9cl9dD2EeXjqsMYhAJAc8x7pHBOKEz6Zrj_GF3ngUXm58OL2TbDJ4ySXCezXby</string>
    <string name="fcm_sender_id">916343548017</string>
    <string name="gametype_rummy">Rummy</string>
    <string name="gametype_callbreak">CallBreak</string>
    <string name="paytm_merchantid">rqVxKU10934034518936</string>
    <string name="home_bottom_menu">Home</string>
    <string name="fantasy_bottom_menu">Fantasy</string>
    <string name="refer_bottom_menu">Refer</string>
    <string name="wallet_bottom_menu">Wallet</string>
    <string name="upcoming">Upcoming</string>
    <string name="live">Live</string>
    <string name="completed">Completed</string>
    <string name="match_countdown_timer">Starts in: %1$s</string>
    <string name="live_now_msg">Live Now</string>
    <string name="match_ended_msg">Match Ended</string>
    <string name="join">Join</string>
    <string name="total_prize">Total Prize</string>
    <string name="entry_fee">Entry Fee</string>
    <string name="entry">Entry</string>
    <string name="contest_lowercase_title">Contest</string>
    <string name="contest_title">Contests</string>
    <string name="createteam_title">CREATE TEAM</string>
    <string name="prize_pool">Prize Pool</string>
    <string name="winners_prize_amount">Winners Prize Amount</string>
    <string name="rank">Rank</string>
    <string name="prize_amount">Prize Amount</string>
    <string name="prize_label">Prize</string>
    <string name="matches_tabname">Matches</string>
    <string name="mymatches_tabname">My Matches</string>
    <string name="contestdetails_tabname">Contest Details</string>
    <string name="leaderboard_tabname">Leaderboard</string>
    <string name="befirst_to_joincontest">Be the first in your network to join this contest.</string>
    <string name="no_matches_error">No Matches found!</string>
    <string name="no_contests_error">No Contests found!</string>
    <string name="no_players_error">No Players found!</string>
    <string name="select_captain_and_vicecaptain">Select your Captain and Vice-Captain to proceed!</string>
    <string name="enter_your_team_name">Enter your team name to proceed!</string>
    <string name="captain_and_vicecaptain_different">Captain and Vice-Captain cannot be a same Player!</string>
    <string name="next">Next</string>
    <string name="team_preview">Team Preview</string>
    <string name="new_team_created">New Team Created!</string>
    <string name="choose_captainandvicecaptain">Choose your Captain and Vice Captain</string>
    <string name="captain_vicecaptain_benefits">C gets 2x points, VC gets 1.5x points</string>
    <string name="select_match">Select Match</string>
    <string name="create_team">Create Team</string>
    <string name="join_contest">Join Contest</string>
    <string name="players_count">Players <strong>%1$s/%2$s</strong></string>
    <string name="team_member_count">%1$s <strong>%2$s</strong> | %3$s <strong>%4$s</strong></string>
    <string name="credit_left">Credits Left</string>
    <string name="credit_count"><strong>%1$s</strong>/<strong>%2$s</strong></string>
    <string name="bowlers_min_req">PICK %1$s-%2$s Bowlers</string>
    <string name="batsman_min_req">PICK %1$s-%2$s Batsman</string>
    <string name="keeper_min_req">PICK %1$s-%2$s Keepers</string>
    <string name="allrounder_min_req">PICK %1$s-%2$s AllRounders</string>
    <string name="max_keepers_selected">Max Keepers already selected!</string>
    <string name="max_batsman_selected">Max Batsman already selected!</string>
    <string name="max_bowlers_selected">Max Bowlers already selected!</string>
    <string name="max_allrounders_selected">Max AllRounders already selected!</string>
    <string name="max_players_selected">Team is full!</string>
    <string name="max_credits_reached">Credits not enough!</string>
    <string name="invalid_team_selected_error">Selected Team is not Valid! </string>
    <string name="select_team_for_contest_error">Please, Select your team for the contest! </string>
    <string name="enter_teamname_hint">Enter Team Name</string>
    <string name="time_left">%1$s left</string>
    <string name="no_saved_teams_found">No Saved Teams found! Create your team.</string>
    <string name="player">Player</string>
    <string name="points">Points</string>
    <string name="selected_percent">Selected %</string>
    <string name="credits">Credits</string>
    <string name="type_heading">TYPE</string>
    <string name="points_heading">POINTS</string>
    <string name="percent_captain_heading">%C BY</string>
    <string name="percent_vicecap_heading">%VC BY</string>
    <string name="save_team">Save Team</string>
    <string name="join_with_team">Join With Team</string>
    <string name="join_now">Join Now</string>
    <string name="create_new_team">Create New Team</string>
    <string name="total_winnings">Total Winnings : </string>
    <string name="entry_fee_label">Entry Fee : </string>
    <string name="benefittwice">2x</string>
    <string name="benfitonepointfive">1.5x</string>
    <string name="captain_short">C</string>
    <string name="vicecaptain_short">VC</string>
    <string name="captain">Captain</string>
    <string name="vicecaptain">Vice Captain</string>
    <string name="batsman_shortname">BAT</string>
    <string name="bowler_shortname">BOW</string>
    <string name="allrounder_shortname">ALR</string>
    <string name="wicketkeeper_shortname">WK</string>
    <string name="saving_team">Saving Team...</string>
    <string name="loading_match_details">Loading all matches...</string>
    <string name="loading_my_match_details">Loading all my matches...</string>
    <string name="joining_contest">Joining Contest...</string>
    <string name="loading_all_contests_formatch">Loading all contests...</string>
    <string name="loading_all_players_formatch">Loading all players...</string>
    <string name="loading_contest_details">Loading contest details...</string>
    <string name="teams_joined_data">Teams Joined: %1$s/%2$s</string>
    <string name="total_winners">Winners: %1$s</string>
    <string name="spots_left_msg">%1$s spots left</string>
    <string name="total_spots_msg">%1$s spots</string>
    <string name="match_live_message">Match is already live!</string>
    <string name="match_completed_message">Match is already completed!</string>
    <string name="create_your_team">Create Your Team</string>
    <string name="create_or_editteam">Create / Edit Teams</string>
    <string name="my_contests">My Contests</string>
    <string name="razorpay_keyid">rzp_test_URl2YlbzrS0Zd0</string>
    <string name="razorpay_keysecret">3HvVBoeTJOxwZ9pmPtok3KWo</string>
    <string name="update_available_alert">An update is available for you</string>
    <string name="install">Install</string>
    <string name="login_screen_msg">Welcome to\nVume Games</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="remember_me_login">Keep me signed in</string>
    <string name="new_to_joshrummy">New to Vume Games?</string>
    <string name="new_user">New User?</string>
    <string name="resend_otp_link">Resend OTP!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password_btn_text">Reset Password</string>
    <string name="reset_password">Reset</string>
    <string name="fill_all_entries_error_title">Invalid/No Entries!</string>
    <string name="fill_all_entries_error">Please, enter all the entries to proceed!</string>
    <string name="min_withdrawable_balance_error">Withdrawable balance should be atleast ₹%1$s!</string>
    <string name="fill_withdrawbalance_error">Please, enter valid withdrawal balance to proceed!</string>
    <string name="invalid_password_error">Password\'s should be of 8-20 chars, with atleast 1 number, 1 lowercase, 1 uppercase and 1 special character! Shouldn\'t contain a space!</string>
    <string name="invalid_username_error">Username should be of 3-20 chars and should only contains Alphanumeric characters and underscores (_). And, the first character must be an Alphabet!</string>
    <string name="invalid_accountholdername">Account holder name can only contain Alphabets!</string>
    <string name="invalid_bankname">Invalid Bankname!</string>
    <string name="select_from_autocomplete_bankname">Please, select a valid Bank Name from autoselect.</string>
    <string name="fill_addcash_entries_error_title">Invalid/No Entries!</string>
    <string name="fill_addcash_entries_error">Please, enter the cash amount to add!</string>
    <string name="enter_valid_email_error_title">Invalid Email ID!</string>
    <string name="enter_valid_email_error_msg">Please, enter Valid Email ID!</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="logging_in_progress">Logging in...</string>
    <string name="enter_mobile_heading">Enter your mobile number</string>
    <string name="enter_mobile_no_hint">Mobile number</string>
    <string name="label_mobileno">Mobile number</string>
    <string name="get_otp_label">Get OTP</string>
    <string name="enter_otp_heading">OTP sent to %1$s</string>
    <string name="label_enterotp">Enter the OTP</string>
    <string name="hint_enterotp">OTP</string>
    <string name="resendotp">Resend OTP</string>
    <string name="reset_pass_heading">Reset Password</string>
    <string name="label_new_pass">Set new password</string>
    <string name="hint_new_pass">New password</string>
    <string name="label_confirm_pass">Confirm new password</string>
    <string name="hint_confirm_pass">Confirm new password</string>
    <string name="remember_me">Remember me</string>
    <string name="heading_choose_language">Choose your language</string>
    <string name="heading_registerforrummy">Register for Josh CallBreak</string>
    <string name="heading_set_password">Set a password</string>
    <string name="lang_english">English</string>
    <string name="lang_hindi">हिन्दी</string>
    <string name="lang_tamil">தமிழ்</string>
    <string name="lang_telugu">తెలుగు</string>
    <string name="lang_malayalam">മലയാളം</string>
    <string name="lang_kannada">ಕನ್ನಡ</string>
    <string name="confirm_langauge">Confirm %1$s</string>
    <string name="label_referralcode">Referral code(Optional)</string>
    <string name="label_haveanaccount">Have an account?</string>
    <string name="edit_mobile_no">Edit mobile number</string>
    <string-array name="available_langauges">
        <item>English</item>
        <item>हिन्दी</item>
        <item>తెలుగు</item>
        <item>தமிழ்</item>
        <item>മലയാളം</item>
        <item>ಕನ್ನಡ</item>
    </string-array>
    <string name="select_bank">Select Bank</string>
    <string name="select_country_code">Select Country code</string>
    <string name="recharge">Recharge</string>
    <string name="submit">Submit</string>
</resources>