<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/lbl_chooselang"
        style="@style/SubHeading"
        android:text="@string/heading_choose_language"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/lbl_English"
        style="@style/EditextLabel"
        android:layout_width="90dp"
        android:text="English"
        app:autoSizeTextType="uniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_hindi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_selected_english"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/lbl_English"
        app:layout_constraintBottom_toBottomOf="@id/lbl_English"
        app:layout_constraintStart_toEndOf="@+id/lbl_English"
        app:layout_constraintWidth_percent="0.07"
        android:src="@mipmap/tick_green_round"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/lbl_hindi"
        style="@style/EditextLabel"
        android:layout_width="90dp"
        android:text="@string/lang_hindi"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_chooselang"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.85"/>

    <ImageView
        android:id="@+id/img_selected_hindi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/lbl_hindi"
        app:layout_constraintBottom_toBottomOf="@id/lbl_hindi"
        app:layout_constraintStart_toEndOf="@+id/lbl_hindi"
        app:layout_constraintWidth_percent="0.07"
        android:src="@mipmap/tick_green_round"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/lbl_telugu"
        style="@style/EditextLabel"
        android:layout_width="90dp"
        android:text="@string/lang_telugu"
        app:autoSizeTextType="uniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_tamil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/img_selected_telugu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/lbl_telugu"
        app:layout_constraintBottom_toBottomOf="@id/lbl_telugu"
        app:layout_constraintStart_toEndOf="@+id/lbl_telugu"
        app:layout_constraintWidth_percent="0.07"
        android:src="@mipmap/tick_green_round"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/lbl_tamil"
        style="@style/EditextLabel"
        android:layout_width="90dp"
        android:text="@string/lang_tamil"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_hindi"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.85" />

    <ImageView
        android:id="@+id/img_selected_tamil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/lbl_tamil"
        app:layout_constraintBottom_toBottomOf="@id/lbl_tamil"
        app:layout_constraintStart_toEndOf="@+id/lbl_tamil"
        app:layout_constraintWidth_percent="0.07"
        android:src="@mipmap/tick_green_round"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/lbl_kannada"
        style="@style/EditextLabel"
        android:layout_width="90dp"
        android:text="@string/lang_kannada"
        app:autoSizeTextType="uniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_malayalam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_selected_kannada"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/lbl_kannada"
        app:layout_constraintBottom_toBottomOf="@id/lbl_kannada"
        app:layout_constraintStart_toEndOf="@+id/lbl_kannada"
        app:layout_constraintWidth_percent="0.07"
        android:src="@mipmap/tick_green_round"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/lbl_malayalam"
        style="@style/EditextLabel"
        android:layout_width="90dp"
        android:text="@string/lang_malayalam"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_tamil"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.1"/>

    <ImageView
        android:id="@+id/img_selected_malayalam"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/lbl_malayalam"
        app:layout_constraintBottom_toBottomOf="@id/lbl_malayalam"
        app:layout_constraintStart_toEndOf="@+id/lbl_malayalam"
        app:layout_constraintWidth_percent="0.07"
        android:src="@mipmap/tick_green_round"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btn_chooselanguage"
        style="@style/JoshButton"
        android:background="@drawable/button_bg"
        android:text="@string/confirm_langauge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_malayalam"
        app:layout_constraintVertical_bias="0.16" />
</androidx.constraintlayout.widget.ConstraintLayout>