<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    tools:context=".Fragment.MatchesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/all_matches_navigationbar"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/pixel_0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintHeight_percent="0.055"
            app:layout_constraintWidth_percent="0.85"
            app:cardElevation="@dimen/pixel_8dp"
            app:cardCornerRadius="@dimen/pixel_8dp"
            app:cardBackgroundColor="@color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                >
                <TextView
                    android:id="@+id/upcoming_matches"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/upcoming"
                    android:textColor="@color/white"
                    android:background="@drawable/flat_red_button_bg_without_corner"
                    android:layout_weight="1"
                    style="@style/SubTabTextAppearance"
                    />
                <TextView
                    android:id="@+id/live_matches"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/live"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/SubTabTextAppearance"
                    />
                <TextView
                    android:id="@+id/completed_matches"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/completed"
                    android:layout_weight="1"
                    style="@style/SubTabTextAppearance"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/pixel_0dp"
            android:scrollbars="none"
            android:id="@+id/allmatches_recyclerview"
            app:layout_constraintTop_toBottomOf="@+id/all_matches_navigationbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/pixel_12dp"
            android:background="@color/grey"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/no_matches_error"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pixel_0dp"
            app:layout_constraintTop_toBottomOf="@+id/all_matches_navigationbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/no_matches_error"
            android:layout_weight="1"
            style="@style/SubTabTextAppearance"
            android:textSize="@dimen/pixel_13dp"
            android:gravity="center"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>